--- a/package.json
+++ b/package.json
@@ -1,22 +1,57 @@
 {
-  "name": "webpage-builder",
-  "private": true,
-  "version": "0.0.0",
+  "name": "wp-builder",
   "type": "module",
-  "bin": {
-    "wp": "bin/wp-builder.js"
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/wp-builder.cjs",
+  "module": "./dist/wp-builder.mjs",
+  "exports": {
+    ".": {
+      "import": "./dist/wp-builder.mjs",
+      "require": "./dist/wp-builder.cjs"
+    }
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brimmann/webpage-builder.git"
+  },
+  "keywords": [
+    "static pages",
+    "library",
+    "tempalte",
+    "section",
+    "js",
+    "html"
+  ],
+  "author": {
+    "name": "Mohammad Rashid Stanikzai",
+    "email": "mohammadrashidstanikzai@gmail.com",
+    "url": "https://codeglyn.com"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/brimmann/webpage-builder/issues"
+  },
+  "homepage": "https://github.com/brimmann/sketchycodeglyn",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build:vite": "vite build",
     "preview": "vite preview",
-    "wp": "npx wp"
+    "build": "unbuild"
   },
   "devDependencies": {
-    "prettier": "3.3.3",
+    "rollup": "4.20.0",
+    "unbuild": "2.0.0",
     "vite": "^5.4.0"
   },
   "dependencies": {
-    "jsdom": "24.1.1"
+    "jsdom": "24.1.1",
+    "prettier": "3.3.3"
+  },
+  "peerDependencies": {
+    "jsdom": "24.1.1",
+    "prettier": "3.3.3",
+    "vite": "^5.4.0"
   }
 }
