--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   "devDependencies": {
     "rollup": "4.20.0",
     "unbuild": "2.0.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "semantic-release": "24.0.0"
   },
   "dependencies": {
     "jsdom": "24.1.1",
